--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.0.0-beta.3",
     "@angular/animations": "^6.1.3",
     "@angular/common": "^6.0.0",
     "@angular/compiler": "^6.0.0",
@@ -25,6 +26,7 @@
     "jquery": "^3.3.1",
     "ngx-toastr": "^9.0.2",
     "rxjs": "^6.0.0",
+    "rxjs-compat": "^6.2.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
