--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^3.3.7",
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
+    "ngx-spinner": "^6.1.2",
     "ngx-toastr": "^9.0.2",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.2.2",
